--- a/style.css
+++ b/style.css
@@ -2,15 +2,21 @@
 *::before,
 *::after {
   box-sizing: border-box;
-}
-body {
-  background-color: #504f4f;
   margin: 0;
-  direction: rtl;
 }
+:root{
+  font-family: Noto Kufi Arabic, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  direction: rtl;
+  background-color: #504f4f;
+}
+
 #root {
   display: flex;
   height: 100vh;
+  position: relative;
+  overflow-x: hidden;
 }
 #clientsList {
   color: aliceblue;
@@ -27,25 +33,29 @@ body {
   margin: 0 auto;
 }
 #viewerCanvas {
-  margin-top: .5rem;
   width: 100%;
   height: calc(100% - 150px);
-  /* max-height:calc(100% - 150px); */
 }
 .viewer {
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
 }
+.form-controller-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding: .5rem;
+  background-color: #3f3e3e;
+}
 .form-controller {
   display: flex;
-  padding: 1rem;
+  padding: .5rem;
   gap: .375rem;
   align-self: center;
   border: 2px solid gray;
   border-radius: .5rem;
-  font-size: 1.25rem;
   font-weight: bold;
   color: white;
-  background-color: #3f3e3e;
+  /* background-color: #3f3e3e; */
 }
 .viewerComponent {
   color: white;
@@ -59,4 +69,53 @@ body {
   border-radius: .5rem;
   padding: .5rem;
   cursor: pointer;
+  font-family: Noto Kufi Arabic;
+}
+.menu-btn {
+  background: transparent;
+  aspect-ratio: 1;
+  width: 2rem;
+  min-width: 2rem;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  opacity: .7;
+  transition: opacity .3s ease-in-out;
+  display: none;
+}
+.menu-btn:hover {
+  opacity: 1;
+}
+.menu-img {
+  width: 100%;
+  height: 100%;
+}
+.hide {
+  display: none;
+}
+.active {
+  -o-border-image: linear-gradient(90deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  border-image: linear-gradient(90deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  border-image-slice: 1;
+  border-width: 2px;
+}
+.show-menu {
+  transform: translateX(0);
+}
+@media screen and (max-width: 768px) {
+  .menu-btn {
+    display: flex;
+  }
+  .clients-list {
+    position: absolute;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+    z-index: 2;
+  }
+  #viewerPanel {
+    max-width: 100%;
+  }
+  .form-controller-container {
+    flex-direction: column;
+  }
 }
