--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
   margin: 0;
 }
+h2 {
+  text-align: center;
+  padding: .5rem;
+}
+
 :root{
   font-family: Noto Kufi Arabic, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -39,6 +44,9 @@
 .viewer {
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
 }
+.progress-label {
+  color: aliceblue;
+}
 .form-controller-container {
   display: flex;
   flex-wrap: wrap;
@@ -70,6 +78,7 @@
   padding: .5rem;
   cursor: pointer;
   font-family: Noto Kufi Arabic;
+  width: 100%;
 }
 .menu-btn {
   background: transparent;
@@ -99,18 +108,23 @@
   border-image-slice: 1;
   border-width: 2px;
 }
-.show-menu {
-  transform: translateX(0);
+.m-p {
+  margin-bottom: .375rem;
 }
 @media screen and (max-width: 768px) {
   .menu-btn {
     display: flex;
+    z-index: 1000;
   }
   .clients-list {
     position: absolute;
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
-    z-index: 2;
+    background-color: #3f3e3e;
+  }
+  .show-menu {
+    transform: translateX(0);
+    z-index: 500;
   }
   #viewerPanel {
     max-width: 100%;
@@ -118,4 +132,5 @@
   .form-controller-container {
     flex-direction: column;
   }
+  
 }
